applications/api-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-api
  name: openeuler-api
