applications/api-ingress/bot-debug-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bot-debug-service 
spec:
  type: ExternalName
  externalName: openeuler-bot-debug.bot-debug.svc.cluster.local
