applications/api-ingress/bot-release-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bot-release-service 
spec:
  type: ExternalName
  externalName: botservice-release.bot-release.svc.cluster.local
