applications/api-ingress/cve-manager-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cve-manager-service
spec:
  typs: ExternalName
  externalName: cve-manager-service.cve-manager.svc.cluster.local
