applications/api-ingress/hdc-task-manager-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hdc-task-manager-service
spec:
  type: ExternalName
  externalName: hdc-task-manager-service.hdc-task-manager.svc.cluster.local
