applications/api-ingress/meeting-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meeting-service
spec:
  type: ExternalName
  externalName: meeting-service.meetingserver.svc.cluster.local
