applications/api-ingress/osi-task-manager-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: osi-task-manager-service
spec:
  type: ExternalName
  externalName: osi-task-manager-service.osi-task-manager.svc.cluster.local
