applications/api-ingress/package-manage-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pkgmanage-service
spec:
  type: ExternalName
  externalName: packagemanage-service.packagemanage.svc.cluster.local
