applications/api-ingress/https-backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: https-backend-ingress
spec:
  tls:
    - hosts:
        - api.openeuler.org
      secretName: api-tls
  rules:
    - host: api.openeuler.org
      http:
        paths:
          - backend:
              serviceName: patch-tracking-service-release
              servicePort: 80
            path: /patchtracking(/|$)(.*)
