applications/api-ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.openeuler.org"
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /meetings/allmeetings/ {
        deny all;
      }
      location ^~ /meetings/participants/ {
        deny all;
      }
      location ^~ /meetings/registrants/ {
        deny all;
      }
  name: api-ingress
spec:
  tls:
    - hosts:
        - api.openeuler.org
      secretName: api-tls
  rules:
    - host: api.openeuler.org
      http:
        paths:
          - backend:
              serviceName: pkgmanage-service-release
              servicePort: 80
            path: /pkgmanage(/|$)(.*)
          - backend:
              serviceName: pkgmanage-service-debug
              servicePort: 80
            path: /pkgmanagedebug(/|$)(.*)
          - backend:
              serviceName: mailman-service
              servicePort: 8001
            path: /mailman(/|$)(.*)
          - backend:
              serviceName: meeting-service
              servicePort: 80
            path: /meetings(/|$)(.*)
          - backend:
              serviceName: bot-debug-service
              servicePort: 8888
            path: /botdebug(/|$)(.*)
          - backend:
              serviceName: bot-release-service
              servicePort: 8888
            path: /botrelease(/|$)(.*)
          - backend:
              serviceName: cve-manager-service
              servicePort: 80
            path: /cve-manager(/|$)(.*)
          - backend:
              serviceName: hdc-task-manager-service
              servicePort: 80
            path: /hdc-task-manager(/|$)(.*)
          - backend:
              serviceName: osi-task-manager-service
              servicePort: 80
            path: /osi-task-manager(/|$)(.*)            
          - backend:
              serviceName: nginx-purger-service
              servicePort: 80
            path: /nginx-purger(/|$)(.*)
          - backend:
              serviceName: sync-bot-service
              servicePort: 80
            path: /sync-bot(/|$)(.*)
          - backend:
              serviceName: repo-mirrorbits-service
              servicePort: 80
            path: /mirrors(/|$)(.*)
